--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -48,7 +48,8 @@ accepts_new_provinces;The Wasteland Spreads;;;;;;;;;;;;;x
 nogovernment;Wild wasteland;;;;;;;;;;;;;x
 noIdeology;Wilderness;;;;;;;;;;;;;x
 noIssue;None;;;;;;;;;;;;;x
-undead_party;"Plague Visionaries";;;;;;;;;;;;;x
+undead_party;Plague Visionaries;;;;;;;;;;;;;x
+faithless;Faithless;;;;;;;;;;;;;x
 ap_lock_down_modifier;Closed Borders.;;;;;;;;;;;;;x
 ap_lock_down_modifier_desc;We have closed our borders in an attempt to stop the entrance of infected immigrants.;;;;;;;;;;;;;x
 ap_quarantine_modifier;Quarantine;;;;;;;;;;;;;x
