More adjusts to multiplayer

--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -16,7 +16,7 @@ EVTOPTA66001;Our museums are hungry for new artifacts! §RTrigger the infection i
 EVTOPTB66001;We shouldn't bother with this right now. §GDelay the infection for 10 years;;;;;;;;;;;;;x
 EVTOPTC66001;I want some of those artifacts as diplay in my office! §BStart Plague Inc Mode;;;;;;;;;;;;;x
 EVTOPTD66001;Those artefacts could do for nice diplomatic gifts! §BStart Plague Inc Mode Against the AI;;;;;;;;;;;;;x
-EVTOPTE66001;Those artefacts could do for nice diplomatic gifts! §BSend options to another player;;;;;;;;;;;;;x
+EVTOPTE66001;Let's send one of those to one of our fellow allies! §BSend options to another player;;;;;;;;;;;;;x
 EVTNAME66202;A Mysterious Plague...;;;;;;;;;;;;;x
 EVTDESC66202;They call it the Solomon Virus. It travels through the bloodstream, enters the brain, and uses the cells of the frontal lobe to replicate. However, this section of the brain is destroyed in the process and all bodily functions cease. Alive but dormant, the brain is slowly transformed by the virus into a completely new organ whose most notable trait is its independence from oxygen. By removing this all-important resource, the body is no longer dependent on complex support mechanisms such as the heart and lungs. Once mutation is complete, the new organ reanimates the body to transfer the virus. Historically, outbreaks of virus were few and far between, occurring infrequently in Ancient Egypt, Israel, and even noted to be the cause of Roman Order XXXVII and the construction of Hadrian’s Wall. Some of the most recent cases include the “mysterious” disappearance of the Roanoke Island settlers in 1587 and a 1762 outbreak on St. Lucia in the Caribbean. That is, of course, until today...;;;;;;;;;;;;;x
 EVTOPTA66202;How bad can it be?;;;;;;;;;;;;;x
