--- a/TGCApocalypse1836/localisation/00_Apocalypse1836Events.csv
+++ b/TGCApocalypse1836/localisation/00_Apocalypse1836Events.csv
@@ -1,3 +1,4 @@
+CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
 EVTNAME66001;New Archeological Discovery!;;;;;;;;;;;;;x
 EVTDESC66001;A private expedition of our country into Egypt has recently discovered a new ancient building buried deep beneath the desert sands. The main chamber appears to be filled with amazing artifacts and treasures that could shed new light on the ancient civilization of Egypt. While the locals have expressed concern about a cursed disease within the chamber, we should not let their superstitions and ignorance prevent us from accessing this valuable historical find. ;;;;;;;;;;;;;x
 EVTOPTA66001;Our museums are hungry for new artifacts! §RTrigger the infection immediatly;;;;;;;;;;;;;x
