--- a/TGCApocalypse1836/localisation/00_Apocalypse1836Events.csv
+++ b/TGCApocalypse1836/localisation/00_Apocalypse1836Events.csv
@@ -1,9 +1,9 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
 EVTNAME66001;New Archeological Discovery!;;;;;;;;;;;;;x
 EVTDESC66001;A private expedition of our country into Egypt has recently discovered a new ancient building buried deep beneath the desert sands. The main chamber appears to be filled with amazing artifacts and treasures that could shed new light on the ancient civilization of Egypt. While the locals have expressed concern about a cursed disease within the chamber, we should not let their superstitions and ignorance prevent us from accessing this valuable historical find. ;;;;;;;;;;;;;x
-EVTOPTA66001;Our museums are hungry for new artifacts! §RTrigger the infection immediatly;;;;;;;;;;;;;x
+EVTOPTA66001;Our museums are hungry for new artefacts! §RTrigger the infection immediatly;;;;;;;;;;;;;x
 EVTOPTB66001;We shouldn't bother with this right now. §GDelay the infection for 10 years;;;;;;;;;;;;;x
-EVTOPTC66001;I want some of those artifacts as diplay in my office! §BStart Plague Inc Mode;;;;;;;;;;;;;x
+EVTOPTC66001;I want some of those artefacts as diplay in my office! §BStart Plague Inc Mode;;;;;;;;;;;;;x
 EVTOPTD66001;Those artefacts could do for nice diplomatic gifts! §BStart Plague Inc Mode Against the AI;;;;;;;;;;;;;x
 EVTOPTE66001;Let's send one of those to one of our fellow allies! §BSend options to another player;;;;;;;;;;;;;x
 EVTNAME66202;A Mysterious Plague...;;;;;;;;;;;;;x
