Chuguchak/Tarbagatay and Peking Convention
- Separated the two border treaties
- Added a new event chain over western borders where Qing could contest it (mostly for player China)
- Chuguchak will now also apply to Taiping China

--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -2178,8 +2178,8 @@ propose_danube_federation_desc;A new notion has arisen in our country—one of ext
 propose_danube_federation_title;Propose the Danubian Federation;;;;;;;;;;;;;x
 propose_talleyrand_again_title;Propose Talleyrand Plan;;;;;;;;;;;;;x
 propose_talleyrand_again_desc;The Talleyrand plan that we originally proposed to the British in 1830 stated that Belgium should be divided between the powers of France, Britain, Prussia and the Netherlands. The British would in this plan gain a protectorate around Ghent, the Prussians will take custody over the duchies of Luxembourg and Limburg while the Dutch regain control over eastern Flanders. We would gain control over western Wallonia as well as the region around Brussels. The British originally rejected this idea, but what could be the harm in asking them again?;;;;;;;;;;;;;x
-protocol_of_chuguchak_desc;With the Qing Empire weakened we can now further expand our empire at their cost in the Far East and Central Asia.;;;;;;;;;;;;;x
-protocol_of_chuguchak_title;Protocol of Chuguchak;;;;;;;;;;;;;x
+treaty_of_tarbagatay_title;The Treaty of Chuguchak;;;;;;;;;;;;;x
+treaty_of_tarbagatay_desc;Since the Peking Convention, the Russian Empire has recognized the Lake Balkhash as the natural frontiers between Russia and Northwest China. There are many within the government, however, who believe it would be in our best interest to access a land port upon the Dzungarian Basin for easier access to the thriving markets of the Altishahr. Considering the Chinese only barely control their northwestern provinces, it seems within our right to negotiate for their control... and with their state of turmoil now is the best time to approach them.;;;;;;;;;;;;;x
 provincia_cisplatina_desc;The Provincia Cisplatina was Brazilian once, and shall be Brazilian again!;;;;;;;;;;;;;x
 provincia_cisplatina_title;Reclaim Provincia Cisplatina;;;;;;;;;;;;;x
 provincia_paraguay_desc;The Região Oriental was Brazilian once, and shall be Brazilian again!;;;;;;;;;;;;;x
