--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3420,3 +3420,5 @@ renovate_cities_of_the_empire_desc;Alexandria, Antioch, Smyrna and several other
 renovate_cities_of_the_empire_title;Renovate Cities of the Empire;;;;;;;;;;;;;x
 democratize_viceroyalties_desc;Last time our colonies rebelled at the turn of 19th century, their goal initially was not independence, it was political reform and autonomy. Perhaps, we should do now what our predecessors were too conservative to do then.;;;;;;;;;;;;;x
 democratize_viceroyalties_title;Democratize Viceroyalties;;;;;;;;;;;;;x
+soldiers_ai_gp_desc;Our nation is approaching dangerously low pool of manpower. According to our military doctrine and laws, we must invest in more soldiers.;;;;;;;;;;;;;x
+soldiers_ai_gp_title;AI: Call up Reservists;;;;;;;;;;;;;x
