--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1497,3 +1497,4 @@ research_campaign;Active Research Campaign;;;;;;;;;;;;;x
 research_campaign_desc;We are currently focusing part of our annual budget on funding more research for our country;;;;;;;;;;;;;x
 church_property_confiscation;Church Property Confiscated;;;;;;;;;;;;;x
 church_property_confiscation_desc;We are fixing our budget holes with the property of the Catholic Church and its monasteries;;;;;;;;;;;;;x
+soldier_fix;Recently called up reservists;;;;;;;;;;;;;x
