--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1498,3 +1498,5 @@ research_campaign_desc;We are currently focusing part of our annual budget on fu
 church_property_confiscation;Church Property Confiscated;;;;;;;;;;;;;x
 church_property_confiscation_desc;We are fixing our budget holes with the property of the Catholic Church and its monasteries;;;;;;;;;;;;;x
 soldier_fix;Recently called up reservists;;;;;;;;;;;;;x
+arch_museum;Archaeological Museum;;;;;;;;;;;;;x
+arch_museum_desc;This city holds an marvellous Archaeological Museum;;;;;;;;;;;;;x
