--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -122,7 +122,7 @@ EVTDESC2601;There is no longer a need to justify a claim in $STATENAME$, since i
 EVTNAME2601;Integration Cancelled;;;;;;;;;;;;;x
 EVTOPTA2601;So be it.;;;;;;;;;;;;;x
 EVTDESC2605;$COUNTRY$ has controlled $PROVINCENAME$ for a long time-long enough for those within $PROVINCENAME$ to truly consider themselves $COUNTRY_ADJ$ citizens, and for the rest of the world to consider the $COUNTRY_ADJ$ claim to the province to be legitimate as well. Though there are still some unhappy with the development, $PROVINCENAME$ is now considered an integral part of $COUNTRY$.;;;;;;;;;;;;;x
-EVTNAME2605;$PROVINCENAME$ Integrated into $COUNTRY$;;;;;;;;;;;;;x
+EVTNAME2605;$PROVINCENAME$ Integrated!;;;;;;;;;;;;;x
 EVTOPTA2605;Long live $COUNTRY$!;;;;;;;;;;;;;x
 EVTDESC2610;$STATENAME$ is considered $COUNTRY_ADJ$ territory-that is only in dispute by those neighbours who still have recognized claims on the area, and who maintain that many within $STATENAME$ consider themselves citizens of their country and not ours. The first step in rendering their claim invalid would be to enact a policy that encourages the assimilation of all people within $STATENAME$… they should be $COUNTRY_ADJ$ citizens, and hold no other nationality above ours.;;;;;;;;;;;;;x
 EVTNAME2610;$STATENAME$ Assimilation;;;;;;;;;;;;;x
