Questioning Our Alliance
Added an image and improved the loc

--- a/TGC/localisation/00_events_0010000.csv
+++ b/TGC/localisation/00_events_0010000.csv
@@ -1534,9 +1534,9 @@ EVTOPTB19015;Not yet.;;;;;;;;;;;;;x
 EVTDESC19016;We are under the influence of a Great Power. Or we should be.;;;;;;;;;;;;;x
 EVTNAME19016;The Great Game;;;;;;;;;;;;;x
 EVTOPTA19016;We welcome our new allies.;;;;;;;;;;;;;x
-EVTDESC19017;We have begun to question our alliance to a great power that is clearly not our true protector.;;;;;;;;;;;;;x
+EVTDESC19017;After some bold diplomatic moves, we ended up in the sphere of a great power, a very powerful nation that can protect us in exchange of our loyalty and the access to our markets. This development, undoubtedly beneficial for our finances, raised a question: what should we do about our relations with the other powers? It's clear that we don't have much of a choice in this, and we must abandon every alliance with countries that aren't our new sphere leader, for the good of our economy, of our country and of our people.;;;;;;;;;;;;;x
 EVTNAME19017;Questioning Our Alliance;;;;;;;;;;;;;x
-EVTOPTA19017;Let us change this arrangement.;;;;;;;;;;;;;x
+EVTOPTA19017;It has to be done.;;;;;;;;;;;;;x
 EVTDESC19018;A series of diplomatic blunders have broken our alliance!;;;;;;;;;;;;;x
 EVTNAME19018;Alliance Broken!;;;;;;;;;;;;;x
 EVTOPTA19018;Ah, blast.;;;;;;;;;;;;;x
