Fire events nerfed
Those "disaster" events were too benefitial, now they comes with debuffs if not dealt with and the minor buffs need bigger expenses

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -286,6 +286,8 @@ cuza_reforms;Cuza’s Reforms;;;;;;;;;;;;;x
 cuza_reforms_desc;The westernizing reforms of A. I. Cuza have greatly changed our country.;;;;;;;;;;;;;x
 daimyo_draft;Emergency Draft;;;;;;;;;;;;;x
 daimyo_draft_desc;We must recruit all able-bodied men to fight!;;;;;;;;;;;;;x
+damaged_city;Damaged City;;;;;;;;;;;;;x
+damaged_city_desc;This city has been damaged by a terrible disaster.;;;;;;;;;;;;;x
 dar_al_funun;The Dar al-Funun.;Le Dar al Funun.;Der Dar al Funun.;;;;;;;;;;;x
 dar_al_funun_desc;The first modern university in Persia.;;;;;;;;;;;;;x
 debt_default_to;Debt Default To;;;;;;;;;;;;;x
@@ -1061,7 +1063,7 @@ reading_desc;A great work of literature inspired the people to read. The masses 
 rebel_cell_discovered;Rebel Cell Discovered;;;;;;;;;;;;;x
 rebel_cell_discovered_desc;With one rebel cell uncovered, it’s only a matter of time before we discover the rest and stamp them out!;;;;;;;;;;;;;x
 rebuilding_city;Rebuilding;;;;;;;;;;;;;x
-rebuilding_city_desc;Our city is rebuilding.;;;;;;;;;;;;;x
+rebuilding_city_desc;Our population is recovering from a great disaster that affected the city.;;;;;;;;;;;;;x
 recent_crisis;Recent Crisis;;;;;;;;;;;;;x
 recent_crisis_desc;We have been the instigators in a recent crisis. Until memories fade, the world will likely tend to overlook any further demands we make for our territories.;;;;;;;;;;;;;x
 recent_safari2;Too many safaris;;;;;;;;;;;;;x
@@ -1144,6 +1146,8 @@ slavery_propaganda;Slavery Propaganda;;;;;;;;;;;;;x
 slavery_propaganda_desc;To improve our grip on slavery, we must spread word amongst the people that slavery is good, and will lead to a better nation. So long as there is $COUNTRY_ADJ$ doubt about slavery, this propaganda must go on.;;;;;;;;;;;;;x
 slavery_timer;Slavery;;;;;;;;;;;;;x
 slavery_timer_desc;Slavery in our nation continues on, making our country a bit less attractive as the world moves on.;;;;;;;;;;;;;x
+slightly_damaged_city;Slightly Damaged City;;;;;;;;;;;;;x
+slightly_damaged_city_desc;A terrible disaster affected this city! Thankfully our government enacted some measures to help the population.;;;;;;;;;;;;;x
 slow_down_progress;Reform Restrictions;;;;;;;;;;;;;x
 slow_down_progress_desc;Perhaps it is best if we apply brakes to the rate of reforms. We must allow our people to catch up!;;;;;;;;;;;;;x
 slow_immigration_boom;Immigration Boom;;;;;;;;;;;;;x
