First three new cbs
"End the Slave Trade" and "The French Conquest of Louisiana" (France and US)

--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -137,6 +137,10 @@ dismantle_forts;Dismantle Fortifications;;Reißt Forts ab;;;;;;;;;;;x
 dismantle_forts_desc;Dismantle forts and naval bases.;;Reißt Forts und Marinestützpunkte ab.;;;;;;;;;;;x
 dismantle_forts_setup;Dismantle forts and naval bases in $STATE$;;Reißt Forts und Marinestützpunkte in $STATE$ ab;;;;;;;;;;;x
 dismantle_forts_short;Dismantle constructions in $STATE$;;Reißt Bauten in $STATE$ ab;;;;;;;;;;;x
+end_slave_trade;End the Atlantic Slave Trade;;;;;;;;;;;x
+end_slave_trade_desc;We must stop the inhumane practice of slave selling!;;;;;;;;;;;x
+end_slave_trade_setup;End the Atlantic Slave Trade;;;;;;;;;;;x
+end_slave_trade_short;End the Atlantic Slave Trade;;;;;;;;;;;x
 enforce_clayton_treaty;Enforce Clayton-Bulwer Treaty.;;;;;;;;;;;;;x
 enforce_clayton_treaty_desc;Enforce the Clayton-Bulwer Treaty.;;;;;;;;;;;;;x
 enforce_clayton_treaty_setup;Enforce the Clayton-Bulwer Treaty.;;;;;;;;;;;;;x
@@ -157,6 +161,14 @@ free_peoples;Free People;Peuple libre;Freies Volk;;;;;;;;;;;x
 free_peoples_desc;Liberate a §Ycountry§W from its oppressors;Libérer un §Ypays§W de ses oppresseurs;Befreien Sie ein §YLand§W von seinen Unterdrückern.;;;;;;;;;;;x
 free_peoples_setup;Hand $STATE$ back to $THIRD$ from $RECIPIENT$;Prendre $STATE$ à $RECIPIENT$ pour le rendre à $THIRD$;Geben Sie $STATE$ an $THIRD$ von $RECIPIENT$ zurück;;;;;;;;;;;x
 free_peoples_short;$THIRD$ acquires $STATE$;$THIRD$ prend $STATE$;$THIRD$ erwirbt $STATE$;;;;;;;;;;;x
+french_conquest_of_louisiana_france;Conquer Louisiane;;;;;;;;;;;x
+french_conquest_of_louisiana_france_desc;Conquer the entire historical Territoire de la Louisiane, rightfully ours.;;;;;;;;;;;x
+french_conquest_of_louisiana_france_setup;Conquer Louisiane;;;;;;;;;;;x
+french_conquest_of_louisiana_france_short;Conquer Louisiane;;;;;;;;;;;x
+french_conquest_of_louisiana_usa;Defend Louisiana;;;;;;;;;;;x
+french_conquest_of_louisiana_usa_desc;Louisiana is rightfully ours and we must defend ourselves from French aggression.;;;;;;;;;;;x
+french_conquest_of_louisiana_usa_setup;Defend Louisiana;;;;;;;;;;;x
+french_conquest_of_louisiana_usa_short;Defend Louisiana;;;;;;;;;;;x
 great_game_cb;The Great Game;Réduire;Größe reduzieren;;;;;;;;;;;x
 great_game_cb_desc;The Great Game between Russia and the British Empire demands that all §Yuncivilized nations§W in Central Asia be turned into §Ypuppets§W to prevent the other from doing the same.;Obliger un autre §Ypays§W ?se désarmer et ?nous verser des compensations;Zwischen Sie ein anderes §YLand§W zur Abrüstung und zu Reparationszahlungen an uns.;;;;;;;;;;;x
 great_game_cb_setup;$RECIPIENT$ becomes a puppet of $ACTOR$;$RECIPIENT$ devient satellite de $ACTOR$;$RECIPIENT$ wird eine Marionette von $ACTOR$;;;;;;;;;;;x
