--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -81,6 +81,7 @@ AGRESSION_WAR_CONQUEST_NAME_HAI_DOM;$ORDER$Dominican War of Independence;;;;;;;;
 AGRESSION_WAR_CONQUEST_NAME_SAR_PAP;The Expedition of the Thousand;;;;;;;;;;;;;x
 AGRESSION_WAR_CONQUEST_NAME_TUR_CRE;The $ORDER$Cretan Revolt;;;;;;;;;;;;;x
 AGRESSION_WAR_DISMANTLE_NAME;$ORDER$War of $FIRST$ Aggression;$ORDER$ Offensive Militaire $FIRST$;$ORDER$ $FIRST$ Angriffskrieg;;;;;;;;;;;x
+AGRESSION_WAR_END_SLAVE_TRADE;Punitive Expedition against the Slave Traders;;;;;;;;;;;;;x
 AGRESSION_WAR_ENFORCE_CLAYTON_TREATY;$FIRST$ War to Enforce Clayton-Bulwer Treaty on $SECOND$;;;;;;;;;;;;;x
 AGRESSION_WAR_FORALLIES_NAME;$ORDER$$FIRST$ Conquest of $STATE$ for $COUNTRY$;;;;;;;;;;;;;x
 AGRESSION_WAR_FREE_ALLIED_CORE_NAME;$ORDER$$FIRST$ War of $COUNTRY_ADJ$ Restoration;;;;;;;;;;;;;x
@@ -211,6 +212,8 @@ NORMAL_CIVIL_WAR_NAME_USA_CSA;The $ORDER$American Civil War;$ORDER$ guerre de ré
 NORMAL_CIVIL_WAR_NAME_USA_CSA_CSA;$ORDER$War of Northern Aggression;$ORDER$ guerre d’agression nordiste;$ORDER$Krieg des Nördlichen Angriffs;;;;;;;;;;;x
 NORMAL_CIVIL_WAR_NAME_USA_CSA_USA;$ORDER$War of the Rebellion;$ORDER$ guerre de rébellion;$ORDER$Rebellionskrieg;;;;;;;;;;;x
 NORMAL_CIVIL_WAR_NAME_USA_FSA;The $ORDER$American Civil War;$ORDER$ guerre de rébellion;$ORDER$Rebellionskrieg;;;;;;;;;;;x
+NORMAL_CONQUEST_OF_LOUISIANA_FRA_USA_FRA;The Reconquest of Louisiane;;;;;;;;;;;x
+NORMAL_CONQUEST_OF_LOUISIANA_FRA_USA_USA;The French Aggression for Louisiana;;;;;;;;;;;x
 NORMAL_CUT_DOWN_TO_SIZE_OTTOMAN_WAR_NAME;The$ORDER$Great Eastern Crisis;;;;;;;;;;;;;x
 NORMAL_CUT_DOWN_TO_SIZE_OTTOMAN_WAR_NAME_RUS_TUR;The Great Eastern Crisis;;;;;;;;;;;;;x
 NORMAL_CUT_DOWN_TO_SIZE_WAR_NAME;$ORDER$$FIRST$–$SECOND$ War;Guerre $ORDER$$FIRST$-$SECOND$;$ORDER$$FIRST$-$SECOND$er Krieg;;;;;;;;;;;x
@@ -288,6 +291,7 @@ NORMAL_WAR_CONQUEST_NAME_HAI_DOM;$ORDER$Dominican War of Independence;;;;;;;;;;;
 NORMAL_WAR_CONQUEST_NAME_SAR_PAP;The Expedition of the Thousand;;;;;;;;;;;;;x
 NORMAL_WAR_CONQUEST_NAME_TUR_CRE;The $ORDER$Cretan Revolt;;;;;;;;;;;;;x
 NORMAL_WAR_DISMANTLE_NAME;$ORDER$$FIRST$ War to Dismantle the $SECOND$ Empire;Grande Guerre $ORDER$$FIRST$-$SECOND$;$ORDER$$FIRST$-$SECOND$ Größer Krieg;;;;;;;;;;;x
+NORMAL_WAR_END_SLAVE_TRADE;British Expedition to End the Atlantic Slave Trade;;;;;;;;;;;;;x
 NORMAL_WAR_ENFORCE_CLAYTON_TREATY;$FIRST$ War to Enforce Clayton-Bulwer Treaty on $SECOND$;;;;;;;;;;;;;x
 NORMAL_WAR_FORALLIES_NAME;$ORDER$$FIRST$ Conquest of $STATE$ for $COUNTRY$;;;;;;;;;;;;;x
 NORMAL_WAR_FREE_ALLIED_CORE_NAME;$ORDER$$FIRST$ War of $COUNTRY_ADJ$ Restoration;;;;;;;;;;;;;x
