--- a/TGC/localisation/00_events_0150000.csv
+++ b/TGC/localisation/00_events_0150000.csv
@@ -26,7 +26,7 @@ EVTNAME160009;The Heavenly Kingdom;;;;;;;;;;;;;x
 EVTDESC160011;Due to the low value assigned to the birth of daughters, female infanticide has become wide-spread across much of China. The practice has become so common, in fact, it has led to a shortage of women.;;;;;;;;;;;;;x
 EVTNAME160011;The Female Shortage;;;;;;;;;;;;;x
 EVTDESC160012;We have received reports of Christian missionaries in $PROVINCENAME$, followers of the so-called ‘Heavenly Kingdom’. Their actions would not be so objectionable if they were not also preaching sedition against the Manchu-and, far worse, though provincial governors have attempted to halt the missionaries this has only seemed to stir up support for them even further. There are sightings of their pamphlets all over $STATENAME$ now!;;;;;;;;;;;;;x
-EVTNAME160012;Taiping Missionaries in $STATENAME$;;;;;;;;;;;;;x
+EVTNAME160012;Taiping Missionaries;;;;;;;;;;;;;x
 EVTOPTA160012;Collect the pamphlets and silence these missionaries-now.;;;;;;;;;;;;;x
 EVTOPTB160012;We shall tolerate this, for now.;;;;;;;;;;;;;x
 EVTDESC160013;To many people in China, the Qing Dynasty is seen as ineffective and corrupt, ruled by Manchu foreigners. Bitter hatred has been stirring, particularly in the south. This is especially true in $STATENAME$, where there are reports of rioting after a recent confrontation between locals and Manchu officials.;;;;;;;;;;;;;x
