--- a/TGC/localisation/00_events_0010000.csv
+++ b/TGC/localisation/00_events_0010000.csv
@@ -53,7 +53,7 @@ EVTDESC10190;And let it be known, that those who argue the cause of revolution a
 EVTNAME10190;Fiery Sermon;;;;;;;;;;;;;x
 EVTOPTA10190;He sounds like a reasonable man!;Voilà un homme qui semble raisonnable !;Er klingt wie ein vernünftiger Mensch!;;;;;;;;;;;x
 EVTDESC10200;‘Death to the $MONARCHTITLE$!’, a hoarse voice cries. The streets in $PROVINCENAME$ have come alive. A local injustice, or the perception of one, have animated the unwashed masses into rebellion against our rule and threatens to spread to the rest of the state. The revolt is still small enough that its future course has not been set in stone, and leniency might avert it, but perhaps it is best to put our foot down firmly to set an example?;;;;;;;;;;;;;x
-EVTNAME10200;Liberal Insurrection in $PROVINCENAME$;;;;;;;;;;;;;x
+EVTNAME10200;Liberal Insurrection;;;;;;;;;;;;;x
 EVTOPTA10200;Send in the troops;Envoyer les troupes;Truppen hineinschicken;;;;;;;;;;;x
 EVTOPTB10200;Negotiate with the leaders;Négocier avec les meneurs;Mit den Anführern verhandeln;;;;;;;;;;;x
 EVTDESC10205;Tensions in one of our provinces reached a boiling point recently, with liberals and reactionaries battling in the streets. $COUNTRY_ADJ$ police were quick to move in, but tempers remain high and already there are reports of fighting elsewhere in the state. Officials are calling for decisive action to put an end to the violence.;;;;;;;;;;;;;x
