--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -115,7 +115,7 @@ EVTDESC2571;In line with their ideology, the $FROMCOUNTRY_ADJ$ government is mak
 EVTNAME2571;$FROMCOUNTRY_ADJ$ Living Space;;;;;;;;;;;;;
 EVTOPTA2571;Worrying news.;;;;;;;;;;;;;
 EVTDESC2600;$COUNTRY$ has maintained control over $STATENAME$ for us to consider the possibility of integrating it into $COUNTRY$ as a whole. There are $COUNTRY_ADJ$ flags waving in $PROVINCENAME$, flown by $COUNTRY_ADJ$ citizens, so it does not seem so far-fetched an idea that $STATENAME$ be eventually considered $COUNTRY_ADJ$ territory by the world at large.;;;;;;;;;;;;;x
-EVTNAME2600;$STATENAME$ Integration;;;;;;;;;;;;;x
+EVTNAME2600;Integration;;;;;;;;;;;;;x
 EVTOPTA2600;We should begin integrating $STATENAME$.;;;;;;;;;;;;;x
 EVTOPTB2600;Let $STATENAME$ remain separate, for now.;;;;;;;;;;;;;x
 EVTDESC2601;There is no longer a need to justify a claim in $STATENAME$, since it already exists.;;;;;;;;;;;;;x
