--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -139,7 +139,7 @@ EVTNAME2615;Flags Burned in $PROVINCENAME$;;;;;;;;;;;;;x
 EVTOPTA2615;The assimilation must continue!;;;;;;;;;;;;;x
 EVTOPTB2615;Abandon assimilation in $STATENAME$.;;;;;;;;;;;;;x
 EVTDESC2616;The recent arrest of a foreign national in $PROVINCENAME$ has led to a diplomatic incident. Many of the minorities within $PROVINCENAME$ claim that the man was arrested solely because he opposed the $COUNTRY_ADJ$ assimilation policies, and was trying to spread word of a peaceful resistance. The $COUNTRY_ADJ$ authorities say the man’s interest was not peaceful in the least, and they suspect he in fact works for one of our neighbours with a claim on $PROVINCENAME$. Whatever the truth, the reaction has not been peaceful in the least-riots are expected, and authorities say to be wary of rebellion in the area.;;;;;;;;;;;;;x
-EVTNAME2616;Incident in $PROVINCENAME$;;;;;;;;;;;;;x
+EVTNAME2616;Diplomatic Incident;;;;;;;;;;;;;x
 EVTOPTA2616;Unfortunate.;;;;;;;;;;;;;x
 EVTDESC2620;A parade has recently taken place in $PROVINCENAME$, with the $COUNTRY_ADJ$ flag flying high-and being held by people who, until very recently, likely wouldn’t have considered themselves $COUNTRY_ADJ$ citizens at all. $PROVINCENAME$ is still claimed by another country, but the acceptance of $PROVINCENAME$’s people is going a long way towards making elimination of that an inevitable fact.;;;;;;;;;;;;;x
 EVTNAME2620;Flags Flying in $PROVINCENAME$!;;;;;;;;;;;;;x
