--- a/TGC/localisation/00_events_0150000.csv
+++ b/TGC/localisation/00_events_0150000.csv
@@ -439,7 +439,7 @@ EVTNAME199034;Grain Farms in $PROVINCENAME$;;;;;;;;;;;;;
 EVTOPTA199034;We will encourage the grain farms.;;;;;;;;;;;;;
 EVTOPTB199034;No -- $PROVINCENAME$'s current production is too valuable.;;;;;;;;;;;;;
 EVTDESC199035;Iron mining is on the rise in $PROVINCENAME$, leading to a good part of the population abandoning previous economical activities in favor of prospecting and extracting iron. Meanwhile, in other parts of $COUNTRY$, new sources of income are discovered or explored.;;;;;;;;;;;;;
-EVTNAME199035;Mining Boom in $PROVINCENAME$;;;;;;;;;;;;;
+EVTNAME199035;Mining Boom;;;;;;;;;;;;;
 EVTOPTA199035;This will surely bring us prosperity.;;;;;;;;;;;;;
 EVTDESC199036;Prospectors in $PROVINCENAME$ struck coal today while looking for precious metals. While not exactly what they were looking for, several $COUNTRY_ADJ$ companies already expressed interested in the commercial exploration of the newfound vein.;;;;;;;;;;;;;
 EVTNAME199036;A Mountain of Coal;;;;;;;;;;;;;
