Latin Larp Initial Commit
- Added historical Latin Monetary Union restored and revamped
- Added Embrace Pan-Latinism decision for Napoleonic France, based on historical adoption by Napoleon III in regards to other Latin and Latam countries
- Latin Customs Union, possible with Pan Latinism and LMU if France spheres Iberia and Italy. Similar to Zollverein
- Iberian, Italian, Latam, or any French Dominion countries will be able to join both if Pan Latinism is adopted. If not, historical countries will join the Monetary Union.
- Second French Empire can proclaim Latin Union, if it either owns, has in sphere, or has puppeted Italy and Iberia, and has formed the Customs Union.
- A coalition of Great Powers will form and attempt to contain and dismantle the Union. Britain, Russia, Austria and Prussia will join forces
- If the Union is dismantled, Napoleon will fall and pre-war status quo will be restored
- If Napoleon beats back the Eighth Coalition, German Confederation will form, which will be joined by the Dutch. Scandinavia will form as well. (WIP)
- Switzerland will abandon neutrality and a civil war between Latins and Germanics will erupt (WIP)
- Basque, Southern Italy, Iberian Galicia, and several mountainous provinces across Iberia and Italy start with nationalist agitation against the Union.

--- a/TGC/localisation/00_events_0010000.csv
+++ b/TGC/localisation/00_events_0010000.csv
@@ -163,6 +163,15 @@ EVTNAME10411;The Death of Napoleon;;;;;;;;;;;;;x
 EVTOPTA10411;Louis-Napoléon IV is the rightful heir.;;;;;;;;;;;;;x
 EVTOPTB10411;Restore the Bourbon dynasty!;;;;;;;;;;;;;x
 EVTOPTC10411;End the monarchy!;;;;;;;;;;;;;x
+EVTDESC10412;Our Pan-Latin political goals in Europe are coming to fruition. Some Pan-Italian Nationalist Movements are seizing control of police stations and courts in the Apennine Peninsula and tearing down last vestiges of Austrian absolutism and Italian aristocracy that divided them for so long. Government in Madrid fell, but the army's loyalties are yet uncertain. We are committing troops to non so compliant regions, but soon enough they too will realize we are all better off together. There is much work to do, but before we commit to it, we must now face Europe's Outrage. Alarms are going off in European capitals, mobilization orders are being scrambled and army preparedness have been raised. It is said when news reached Prince Metternich, now an old man deep in his eighties, the man had a minor heart attack.;;;;;;;;;;;;;x
+EVTNAME10412;Latin Unification;;;;;;;;;;;;;x
+EVTOPTA10412;Now to face the Europe's Wrath;;;;;;;;;;;;;x
+EVTNAME10413;French Expansionism;;;;;;;;;;;;;x
+EVTDESC10413;The Ghost of Napoleon haunts us again.;;;;;;;;;;;;;x
+EVTOPTA10413;We must put an end to this.;;;;;;;;;;;;;x
+EVTDESC10414;$FROMCOUNTRY$ declares an intervention to dismantle the Latin Empire and joins the Eighth Coalition against us.;;;;;;;;;;;;;x
+EVTNAME10414;War of the Eighth Coalition;;;;;;;;;;;;;x
+EVTOPTA10414;Prepare the Army!;;;;;;;;;;;;;x
 EVTDESC11000;Sometimes the monarch just isn't there. Dying without a suitable or old enough heir, becoming incapable or senile while the government enters a deadlock. Sometimes the monarch is so ill that the government doesn't work and sometimes he's just away and someone incompetent was left to take care of things in his stead. Regardless of the reason, the $COUNTRY_ADJ$ government is currently going through a regency. We can expect some instability in the years ahead.;;;;;;;;;;;;;x
 EVTNAME11000;Regency;;;;;;;;;;;;;x
 EVTOPTA11000;Terrible news.;;;;;;;;;;;;;x
