--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1504,3 +1504,9 @@ church_property_confiscation_desc;We are fixing our budget holes with the proper
 soldier_fix;Recently called up reservists;;;;;;;;;;;;;x
 arch_museum;Archaeological Museum;;;;;;;;;;;;;x
 arch_museum_desc;This city holds an marvellous Archaeological Museum;;;;;;;;;;;;;x
+latin_customs_union;Latin Customs Union;;;;;;;;;;;;;x
+latin_customs_union_desc;Our country is a member of the Latin Customs Union. We have synchronized our custom laws and duties which allows for trade and economy within the Union to prosper.;;;;;;;;;;;;;x
+french_threat;Rising French Threat;;;;;;;;;;;;;x
+french_threat_desc;Our society is teetering on the brink of militarization as the French Power looms over the Continent;;;;;;;;;;;;;x
+outraged_europe_fra;Europe is Outraged;;;;;;;;;;;;;x
+outraged_europe_fra_desc;European Great Powers are alarmed at our gains and will hurdle together to try and contain us;;;;;;;;;;;;;x
