--- a/TGC/localisation/00_events_0010000.csv
+++ b/TGC/localisation/00_events_0010000.csv
@@ -172,6 +172,23 @@ EVTOPTA10413;We must put an end to this.;;;;;;;;;;;;;x
 EVTDESC10414;$FROMCOUNTRY$ declares an intervention to dismantle the Latin Empire and joins the Eighth Coalition against us.;;;;;;;;;;;;;x
 EVTNAME10414;War of the Eighth Coalition;;;;;;;;;;;;;x
 EVTOPTA10414;Prepare the Army!;;;;;;;;;;;;;x
+EVTDESC10415;Last desperate defence of Paris was attempted, but it is all for naught -- enemy armies are roaming the country freely. We have been thrown out of Italy and Spain, and Germans have seized the Rhine. A ghastly reprisal of 1814 is happening before our eyes -- Paris has fallen.;;;;;;;;;;;;;x
+EVTNAME10415;All is Lost;;;;;;;;;;;;;x
+EVTOPTA10415;Maybe they will let me.. retire to.. an island?;;;;;;;;;;;;;x
+EVTDESC10416;The British, Germans and Russians had hoped to orchastrate a reprisal of 1814, march into Paris, and end our dream once again. But they were sorely mistaken. British have been thrown back into the sea. Russians and Germans have scurried back over the Rhine and the Alps to lick their wounds. Latin Empire is a reality they will have to get used to.. but we should not be surprised if they attempt to take us out again.;;;;;;;;;;;;;x
+EVTNAME10416;We Stand Victorious;;;;;;;;;;;;;x
+EVTOPTA10416;United we shall never falter!;;;;;;;;;;;;;x
+EVTDESC10417;We had gathered the best of lingusticial and philosophical minds of the Latin world to Paris to analyze the Issue of Language and its standardization. A prominent group of scholars have suggested we take into account all leading languages and dialects, modernize and simplify them into a new lingua franca of the Empire. They advocate for Occitan to be taken as a base to be built upon by Spanish, Italian, and French, and create a new, modern, Neolatin Language to unite us all. Others, mostly French Nationalists, are advocating we abandon the attempt of appeasing other Romance speaking people's, and Francophy the entire country, as once the Kingdom did in 16th century Northern France. The third faction posits that while Neolatin idea is grand, it is too ambitious and will drain Empire's educational resources, and suggests 4 official languages, each to be standardized in their own region - French, Italian, Spanish and Portuguese.;;;;;;;;;;;;;x
+EVTNAME10417;Question of Language;;;;;;;;;;;;;x
+EVTOPTA10417;Modern Neolatin Standardization;;;;;;;;;;;;;x
+EVTOPTB10417;French Supremacy!;;;;;;;;;;;;;x
+EVTOPTC10417;Quadriune Official Language Policy;;;;;;;;;;;;;x
+EVTDESC10418;A prominent group of scholars have suggested we take into account all leading languages and dialects, modernize and simplify them into a new, united lingua franca of the Empire. They advocate for Occitan to be taken as a base to be built upon by Spanish, Italian, and French, and create a new, modern, Neolatin Language to unite us all. This is exactly what we must do.;;;;;;;;;;;;;x
+EVTNAME10418;Neolatin Standardization;;;;;;;;;;;;;x
+EVTOPTA10418;The work begins in earnest.;;;;;;;;;;;;;x
+EVTDESC10419;Unite Scandinavia!;;;;;;;;;;;;;x
+EVTNAME10419;Scandinavia Forms;;;;;;;;;;;;;x
+EVTOPTA10419;We must unite to face the Latin threat;;;;;;;;;;;;;x
 EVTDESC11000;Sometimes the monarch just isn't there. Dying without a suitable or old enough heir, becoming incapable or senile while the government enters a deadlock. Sometimes the monarch is so ill that the government doesn't work and sometimes he's just away and someone incompetent was left to take care of things in his stead. Regardless of the reason, the $COUNTRY_ADJ$ government is currently going through a regency. We can expect some instability in the years ahead.;;;;;;;;;;;;;x
 EVTNAME11000;Regency;;;;;;;;;;;;;x
 EVTOPTA11000;Terrible news.;;;;;;;;;;;;;x
