Spanish surrender event
- If Spain says no to Latin Union, Union can start a war and puppet them. Once beaten, they will be annexed

--- a/TGC/localisation/00_events_0010000.csv
+++ b/TGC/localisation/00_events_0010000.csv
@@ -189,6 +189,9 @@ EVTOPTA10418;The work begins in earnest.;;;;;;;;;;;;;x
 EVTDESC10419;Unite Scandinavia!;;;;;;;;;;;;;x
 EVTNAME10419;Scandinavia Forms;;;;;;;;;;;;;x
 EVTOPTA10419;We must unite to face the Latin threat;;;;;;;;;;;;;x
+EVTDESC10420;A provisional government has been set up in Madrid and several Spanish regular army units have switched to our side, while Spanish Bourbons flee the country. It is time to end hostilities and restore order in Iberia.;;;;;;;;;;;;;x
+EVTNAME10420;Spain is Ours!;;;;;;;;;;;;;x
+EVTOPTA10420;We are one people!;;;;;;;;;;;;;x
 EVTDESC11000;Sometimes the monarch just isn't there. Dying without a suitable or old enough heir, becoming incapable or senile while the government enters a deadlock. Sometimes the monarch is so ill that the government doesn't work and sometimes he's just away and someone incompetent was left to take care of things in his stead. Regardless of the reason, the $COUNTRY_ADJ$ government is currently going through a regency. We can expect some instability in the years ahead.;;;;;;;;;;;;;x
 EVTNAME11000;Regency;;;;;;;;;;;;;x
 EVTOPTA11000;Terrible news.;;;;;;;;;;;;;x
