Finnish Famine Rebalance
Nerfed the famine to be more realistic, also will affect certain provinces more severly

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -534,6 +534,7 @@ great_depression_desc;A stock market crash in one of the Great Powers has caused
 great_eastern_crisis;The Great Eastern Crisis;;;;;;;;;;;;;x
 great_eastern_crisis_desc;The Great Powers of Europe are convening to decide the fate of the Ottoman Empire;;;;;;;;;;;;;x
 great_famine_years;Great Famine Years;;;;;;;;;;;;;x
+great_famine_years_severe;Great Famine Years;;;;;;;;;;;;;x
 great_reformer;Great Reformer;;;;;;;;;;;;;x
 great_reformer_desc;A champion of reform, our leader is seen as someone who can enact significant change in our country.;;;;;;;;;;;;;x
 great_statesman;Great Statesman;;;;;;;;;;;;;x
@@ -1136,6 +1137,7 @@ silver_age_desc;Our most excellent leader will take us through a time of trouble
 silver_mine;Silver Mine;;;;;;;;;;;;;x
 singapore_port;Free Port of Singapore;;;;;;;;;;;;;x
 sixtysix_famine;The Famine of 1866;;;;;;;;;;;;;x
+sixtysix_famine_severe;The Famine of 1866;;;;;;;;;;;;;x
 slave_growth;Slave Demographics;;;;;;;;;;;;;x
 slave_growth_desc;The population of slaves changed in our country.;;;;;;;;;;;;;x
 slave_market;Slave Market;;;;;;;;;;;;;x
