--- a/TGC/localisation/00_events_0090000.csv
+++ b/TGC/localisation/00_events_0090000.csv
@@ -1857,7 +1857,7 @@ EVTDESC98725;The call has gone out across the world: a nation has risen to lead 
 EVTNAME98725;The Call for Arab Unity;;;;;;;;;;;;;x
 EVTOPTA98725;We will lead the Arab world!;;;;;;;;;;;;;x
 EVTDESC98800;With the arrival of the $COUNTRY_ADJ$ colonial governor into $PROVINCENAME$, an effort has begun to incorporate $COUNTRY_ADJ$ $STATENAME$ into the larger Nigerian colony.;;;;;;;;;;;;;x
-EVTNAME98800;$STATENAME$ Colonial Incorporation;;;;;;;;;;;;;x
+EVTNAME98800;Colonial Incorporation;;;;;;;;;;;;;x
 EVTOPTA98800;An excellent development!;;;;;;;;;;;;;x
 EVTDESC98805;With the arrival of the $COUNTRY_ADJ$ colonial governor into $PROVINCENAME$, an effort has begun to incorporate $COUNTRY_ADJ$ $STATENAME$ into the larger Togolese colony.;;;;;;;;;;;;;x
 EVTDESC98806;With the arrival of the $COUNTRY_ADJ$ colonial governor into $PROVINCENAME$, an effort has begun to incorporate $COUNTRY_ADJ$ $STATENAME$ into the larger Gambian colony.;;;;;;;;;;;;;x
