--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -2267,7 +2267,7 @@ LTU_hms_government;Empire Latine;;;;;;;;;;;;;x
 LTU_absolute_monarchy2;Empire Latine;;;;;;;;;;;;;x
 LTU_prussian_constitutionalism2;Empire Latine;;;;;;;;;;;;;x
 LTU_hms_government2;Empire Latine;;;;;;;;;;;;;x
-LTU_democracy;Union Latine;x;
+LTU_democracy;Confederation Latine;x;
 LTU_proletarian_dictatorship;Union de Republicas Socialistas Latinas;x;
 LTU_presidential_dictatorship;République Latine;x;
 LTU_bourgeois_dictatorship;République Latine;x;
