--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -611,7 +611,7 @@ IBR_presidential_dictatorship;Iberian Union;;;;;;;;;;;;;x
 IBR_proletarian_dictatorship;Iberian Worker’s Union;;;;;;;;;;;;;x
 IBR_prussian_constitutionalism;Iberian Empire;;;;;;;;;;;;;x
 LTU_bourgeois_dictatorship;Latin Republic;;;;;;;;;;;;;x
-LTU_democracy;Latin Union;;;;;;;;;;;;;x
+LTU_democracy;Latin Confederation;;;;;;;;;;;;;x
 LTU_fascist_dictatorship;Latin State;;;;;;;;;;;;;x
 LTU_presidential_dictatorship;Latin Republic;;;;;;;;;;;;;x
 LTU_proletarian_dictatorship;Union of Latin Socialist Republics;;;;;;;;;;;;;x
