--- a/TGC/localisation/00_events_0010000.csv
+++ b/TGC/localisation/00_events_0010000.csv
@@ -184,7 +184,7 @@ EVTOPTA10417;Modern Neolatin Standardization;;;;;;;;;;;;;x
 EVTOPTB10417;French Supremacy!;;;;;;;;;;;;;x
 EVTOPTC10417;Quadriune Official Language Policy;;;;;;;;;;;;;x
 EVTOPTD10417;Proclaim Latin Confederation - Cherish our regional differences!;;;;;;;;;;;;;x
-EVTDESC10418;A prominent group of scholars have suggested we take into account all leading languages and dialects, modernize and simplify them into a new, united lingua franca of the Empire. They advocate for Occitan to be taken as a base to be built upon by Spanish, Italian, and French, and create a new, modern, Neolatin Language to unite us all. This is exactly what we must do.;;;;;;;;;;;;;x
+EVTDESC10418;A prominent group of scholars have suggested we take into account all leading languages and dialects, modernize and simplify them into a new, united lingua franca of the Empire. They advocate for Occitan to be taken as a base to be built upon by Spanish, Italian, and French, and create a new, modern, Neolatin Language to unite us all. This is exactly what we must do. §G Player note: Due to game engine limitations, this is the only viable way of spawning and spreading and emergent culture. So for a year, your new Neolatin pops will spread around your country so the locals can start assimilating. Do not change the border law, it will be reverted to normal once the year is out.§!;;;;;;;;;;;;;x
 EVTNAME10418;Neolatin Standardization;;;;;;;;;;;;;x
 EVTOPTA10418;The work begins in earnest.;;;;;;;;;;;;;x
 EVTDESC10419;Unite Scandinavia!;;;;;;;;;;;;;x
@@ -193,6 +193,9 @@ EVTOPTA10419;We must unite to face the Latin threat;;;;;;;;;;;;;x
 EVTDESC10420;A provisional government has been set up in Madrid and several Spanish regular army units have switched to our side, while Spanish Bourbons flee the country. It is time to end hostilities and restore order in Iberia.;;;;;;;;;;;;;x
 EVTNAME10420;Spain is Ours!;;;;;;;;;;;;;x
 EVTOPTA10420;We are one people!;;;;;;;;;;;;;x
+EVTDESC10421;One Country, One Language;;;;;;;;;;;;;x
+EVTNAME10421;One Country, One Language;;;;;;;;;;;;;;x
+EVTOPTA10421;One Country, One Language;;;;;;;;;;;;;;x
 EVTDESC11000;Sometimes the monarch just isn't there. Dying without a suitable or old enough heir, becoming incapable or senile while the government enters a deadlock. Sometimes the monarch is so ill that the government doesn't work and sometimes he's just away and someone incompetent was left to take care of things in his stead. Regardless of the reason, the $COUNTRY_ADJ$ government is currently going through a regency. We can expect some instability in the years ahead.;;;;;;;;;;;;;x
 EVTNAME11000;Regency;;;;;;;;;;;;;x
 EVTOPTA11000;Terrible news.;;;;;;;;;;;;;x
