--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -109,12 +109,12 @@ bigben_construction;Reconstruction of the Palace of Westminster;;;;;;;;;;;;;x
 bigben_construction_desc;The Palace of Westminster is being reconstructed and with it, a huge clock tower.;;;;;;;;;;;;;x
 bioweapon_cooldown;Solomon Virus Under Cooldown;;;;;;;;;;;;;x
 bioweapon_cooldown_desc;You must wait till the modifier disappears before deploying The Solomon Virus again.;;;;;;;;;;;;;x
-birthrate_push_high;State Enforced Birthing Campaign;;;;;;;;;;;;;x
-birthrate_push_high_desc;State Enforced Birthing Campaign;;;;;;;;;;;;;x
-birthrate_push_low;Basic Growth Incentives;;;;;;;;;;;;;x
-birthrate_push_low_desc;Basic Growth Incentives;;;;;;;;;;;;;x
-birthrate_push_medium;Aggressive Pop-growth Campaign;;;;;;;;;;;;;x
-birthrate_push_medium_desc;Aggressive Pop-growth Campaign;;;;;;;;;;;;;x
+birthrate_push_high;High Population Incentives;;;;;;;;;;;;;x
+birthrate_push_high_desc;Campaign Cost: Roughly §R7.5%§! of your maximum monthly tax income every 30 days.;;;;;;;;;;;;;x
+birthrate_push_low;Basic Population Incentives;;;;;;;;;;;;;x
+birthrate_push_low_desc;Campaign Cost: Roughly §R2.5%§! of your maximum monthly tax income every 30 days.;;;;;;;;;;;;;x
+birthrate_push_medium;Medium Population Incentives;;;;;;;;;;;;;x
+birthrate_push_medium_desc;Campaign Cost: Roughly §R5%§! of your maximum monthly tax income every 30 days.;;;;;;;;;;;;;x
 black_shirts;Blackshirts;;;;;;;;;;;;;x
 black_shirts_desc;Blackshirts are provoking the residents in the province.;;;;;;;;;;;;;x
 blacks_to_liberia;Afro American Resettlement;;;;;;;;;;;;;x
@@ -1456,9 +1456,11 @@ german_threat;Germany is a Threat;;;;;;;;;;;;;x
 triple_entente;Member of Triple Entente;;;;;;;;;;;;;x
 central_powers;Member of Central Powers;;;;;;;;;;;;;x
 infamy_removal;Active Diplomatic Campaign;;;;;;;;;;;;;x
+infamy_removal_desc;You are focusing budgetary resources to fund this campaign. Campaign Cost: Roughly §R2.5%§! of your maximum monthly tax income every 30 days.;;;;;;;;;;;;;x
 more_colonial_settlement;Active Colonial Campaign;;;;;;;;;;;;;x
+more_colonial_settlement_desc;Campaign Cost: Roughly §R2.5%§! of your maximum monthly tax income every 30 days.;;;;;;;;;;;;;x
 less_emigration;Active Anti-Emigration Campaign;;;;;;;;;;;;;x
-less_emigration_desc;We are actively trying to keep our citizens in our country with better pay and jobs;;;;;;;;;;;;;x
+less_emigration_desc;We are actively trying to keep our citizens in our country with better pay and jobs. Campaign Cost: Roughly §R2.5%§! of your maximum monthly tax income every 30 days.;;;;;;;;;;;;;x
 renovated_hagia_sophia;The Church of Hagia Sophia;;;;;;;;;;;;;x
 renovated_hagia_sophia_desc;Renovated and reconsecrated, it yet again stands the grandest Church in the World;;;;;;;;;;;;;x
 constantinople_patriarchate;Spiritual Center of Orthodoxy;;;;;;;;;;;;;x
@@ -1498,7 +1500,7 @@ renovated_constantinople;Renovated City of World's Desire;;;;;;;;;;;;;x
 metternich;Klemens von Metternich;;;;;;;;;;;;;x
 metternich_desc;At the center of Concert of Europe stands its chief architect, Prince Metternich. Heavily conservative and anti-revolutionary, he is determined to retain Habsburg Absolutism and Europe's status quo.;;;;;;;;;;;;;x
 research_campaign;Active Research Campaign;;;;;;;;;;;;;x
-research_campaign_desc;We are currently focusing part of our annual budget on funding more research for our country;;;;;;;;;;;;;x
+research_campaign_desc;We are currently focusing part of our annual budget on funding more research for our country. Campaign Cost: Roughly §R2.5%§! of your maximum monthly tax income every 30 days.;;;;;;;;;;;;;x
 church_property_confiscation;Church Property Confiscated;;;;;;;;;;;;;x
 church_property_confiscation_desc;We are fixing our budget holes with the property of the Catholic Church and its monasteries;;;;;;;;;;;;;x
 soldier_fix;Recently called up reservists;;;;;;;;;;;;;x
