--- a/TGC/localisation/00_events_0010000.csv
+++ b/TGC/localisation/00_events_0010000.csv
@@ -196,6 +196,9 @@ EVTOPTA10420;We are one people!;;;;;;;;;;;;;x
 EVTDESC10421;One Country, One Language;;;;;;;;;;;;;x
 EVTNAME10421;One Country, One Language;;;;;;;;;;;;;;x
 EVTOPTA10421;One Country, One Language;;;;;;;;;;;;;;x
+EVTDESC10422;Our intellectuals are working tirelessly to adopt the new grammatique standardization across our country both in official and school use. Departament of $PROVINCENAME$ reports successful application of the Neolatin standardization in the school curriculum.;;;;;;;;;;;;;x
+EVTNAME10422;One Country, One Language;;;;;;;;;;;;;;x
+EVTOPTA10422;Good work!;;;;;;;;;;;;;;x
 EVTDESC11000;Sometimes the monarch just isn't there. Dying without a suitable or old enough heir, becoming incapable or senile while the government enters a deadlock. Sometimes the monarch is so ill that the government doesn't work and sometimes he's just away and someone incompetent was left to take care of things in his stead. Regardless of the reason, the $COUNTRY_ADJ$ government is currently going through a regency. We can expect some instability in the years ahead.;;;;;;;;;;;;;x
 EVTNAME11000;Regency;;;;;;;;;;;;;x
 EVTOPTA11000;Terrible news.;;;;;;;;;;;;;x
